# reproducibility_assessment

./: .gitignore  CITATION.cff  README.md  config.py  example.config.ini  pyproject.toml
e2e_system/: reproder.py
notebooks/data_analysis-statistics/e2e_system/classification/: evaluate_all.ipynb  neurips_all.ipynb  (+1 more)
notebooks/data_analysis-statistics/gathering/: acl_papers.ipynb
notebooks/data_analysis-statistics/labelling/: text_sim_ground_truth.ipynb  zero_shot.ipynb
notebooks/data_analysis-statistics/section/: section_analysis.ipynb  section_header_analysis.ipynb
notebooks/data_gathering/: acl_scraping.ipynb  readme_crawling.ipynb
notebooks/data_preparation/: readme_scraping.ipynb  section_cleaning.ipynb  traindata_cleaning.ipynb
notebooks/data_preparation/train_data/: classification.ipynb  hierarchical.ipynb  hierarchical2.ipynb  hierarchical_binary.ipynb  hierarchical_binary2.ipynb
notebooks/data_preparation/unlabelled_data/: acl_autolabelled_equal.ipynb  acl_with_stars_grouped.ipynb
notebooks/e2e_system/classification-based/: evaluate_all.ipynb  evaluate_all_neurips.ipynb
notebooks/e2e_system/hierarchical/: evaluate_all_neurips.ipynb  evaluate_autolabeled.ipynb  evaluate_binary_neurips.ipynb
notebooks/labelling/: text_sim_ground_truth.ipynb  zero_shot.ipynb
notebooks/labelling/agreement/: text_sim_ground_truth.ipynb  text_sim_grouped.ipynb
notebooks/training/: classification.ipynb  hierarchical.ipynb
util/: annotator_helper.py  data_structure_helper.py  file_helper.py  github_helper.py  labelling_helper.py  readme_parser.py  string_helper.py
(+3 files in other folders)
